@@ -10,6 +10,9 @@ import com.vorstu.DeliveryServiceBackend.dto.request.FullAssemblerDTO;
 import com.vorstu.DeliveryServiceBackend.dto.response.AssemblerDTO;
 import com.vorstu.DeliveryServiceBackend.dto.response.OrderDTO;
 import com.vorstu.DeliveryServiceBackend.dto.response.OrderWithStatusDTO;
+import com.vorstu.DeliveryServiceBackend.exception.EmployeeNotFoundException;
+import com.vorstu.DeliveryServiceBackend.exception.IllegalOrderOperationException;
+import com.vorstu.DeliveryServiceBackend.exception.OrderNotFoundException;
 import com.vorstu.DeliveryServiceBackend.mappers.*;
 import com.vorstu.DeliveryServiceBackend.messages.OrderMessage;
 import com.vorstu.DeliveryServiceBackend.services.action.resolver.ActionResolver;
@@ -47,36 +50,35 @@ public class AssemblerService {
         return orderListMapper.toDTOList(orderEntities);
     }
 
-    public OrderMessage doAction(String email, Long orderId, OrderAction action) throws NoSuchElementException {
+    public OrderMessage doAction(String email, Long orderId, OrderAction action) {
         AssemblerEntity assembler = assemblerRepository.findUserByEmail(email);
-        Optional<OrderEntity> orderEntityCandid = orderRepository.findById(orderId);
+        OrderEntity orderEntity = orderRepository.findById(orderId)
+                .orElseThrow(()-> new OrderNotFoundException(String.format("Order with id %d not found", orderId)));
 
-        if(orderEntityCandid.isEmpty()){
-            throw new NoSuchElementException(String.format("Order with id %d not found", orderId));
+        AssemblerEntity orderAssembler = orderEntity.getAssembler();
+        if(orderAssembler != null && orderAssembler.getId() != assembler.getId()){
+            throw new IllegalOrderOperationException(String.format("You cannot operate with order(%d)", orderId));
         }
-
-        OrderEntity orderEntity = orderEntityCandid.get();
 
         assemblerActionResolver.resolve(action, orderEntity, assembler);
         orderRepository.save(orderEntity);
+
         return new OrderMessage(action, baseUserMapper.toDTO(assembler), orderMapper.toDTO(orderEntity));
     }
 
     public OrderWithStatusDTO getCurrentOrder(String email) {
         AssemblerEntity assembler = assemblerRepository.findUserByEmail(email);
         OrderWithStatusDTO candid;
-        Optional<OrderEntity> orderCandid = orderRepository.findCurrentEmployeeOrder(assembler.getId(), Arrays.asList(OrderStatus.ASSEMBLING));
-        if(orderCandid.isPresent()) { //Todo orElseThrow
-            OrderEntity order = orderCandid.get();
-            return new OrderWithStatusDTO(order.getStatus(), orderMapper.toDTO(order));
-        } else {
-            return new OrderWithStatusDTO();
-        }
+        OrderEntity order = orderRepository.findCurrentEmployeeOrder(assembler.getId(), List.of(OrderStatus.ASSEMBLING))
+                .orElse(new OrderEntity());
+
+        return new OrderWithStatusDTO(order.getStatus(), orderMapper.toDTO(order));
     }
 
     public List<AssemblerDTO> getAssemblers(){
-        List<AssemblerEntity> assemblerEntities = new ArrayList();
+        List<AssemblerEntity> assemblerEntities = new ArrayList<>();
         assemblerRepository.findAll().forEach(assemblerEntities::add);
+
         return assemblerListMapper.toDTOList(assemblerEntities);
     }
 
@@ -86,17 +88,15 @@ public class AssemblerService {
                 assembler.getEmail(),
                 assembler.getPassword()
         );
+
         return assemblerMapper.toDTO(assemblerRepository.save(assemblerEntity));
     }
 
-    public AssemblerDTO updateAssembler(Long assemblerId, FullAssemblerDTO assembler) throws NoSuchElementException{
-        Optional<AssemblerEntity> assemblerEntityCandid = assemblerRepository.findById(assemblerId);
-        if(!assemblerEntityCandid.isPresent()){
-            throw new NoSuchElementException(String.format("Assembler with id %d not found", assemblerId));
-        }
-
-        AssemblerEntity assemblerEntity = assemblerEntityCandid.get();
+    public AssemblerDTO updateAssembler(Long assemblerId, FullAssemblerDTO assembler){
+        AssemblerEntity assemblerEntity = assemblerRepository.findById(assemblerId)
+                .orElseThrow(()-> new EmployeeNotFoundException(String.format("Assembler not found, id = {%d}", assemblerId)));
         assemblerEntity.setFio(assembler.getFio());
+
         return assemblerMapper.toDTO(assemblerRepository.save(assemblerEntity));
     }
 
